syntax = "proto3";
package pb;

option go_package = "backend-masterclass/rpc";

message DeleteUserRequest {
  string username = 1;
}

message DeleteUserResponse {
  string message = 1;
}
