syntax = "proto3";
package pb;

import "user.proto";

option go_package = "backend-masterclass/rpc";

message UpdateUserRequest {
  string username = 1;
  string password_hash = 2;
}

message UpdateUserResponse {
  UserResponse before_update = 1;
  UserResponse after_update = 2;
}